--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "id": "8d-custom-view",
   "name": "8D's Custom View",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "minAppVersion": "0.12.0",
-  "description": "An obsidian plugin that adds a custom view with word count and git buttons.",
+  "description": "An obsidian plugin that adds a custom view with word count, git buttons and more.",
   "author": "8D",
   "main": "main.js"
 }
